# smart-gambit

./: CMakeLists.txt  README.md  chessprogramming.txt
src/: board.cpp  board.h  evaluation.cpp  evaluation.h  gui.cpp  gui.h  main.cpp  move.h  movegen.cpp  movegen.h  search.cpp  search.h  utils.h
